# tough

./: .gitignore  .mailmap  CONTRIBUTING.md  Cargo.toml  DELEGATEDTARGETS.md  DELEGATED_TARGETS_TUFTOOL_EXAMPLES.md  EditTargets.drawio  Makefile  NOTICE  README.md  TUFTOOL_EXAMPLES.md  deny.toml
.github/: cache_bust  dependabot.yml
.github/workflows/: rust.yml  specification-version-check.yml
doc/delegated-targets/: AddDelegation.drawio  README.md
integ/failure-server/: .gitattributes  Cargo.toml  Dockerfile.toxiproxycli  Dockerfile.toxy  run.sh  teardown.sh
integ/failure-server/src/: lib.rs
integ/failure-server/src/toxic/: http_server.rs  mod.rs  tcp_proxy.rs
integ/failure-server/toxiproxy/: setup.sh
integ/failure-server/toxy/: index.js  package.json
olpc-cjson/: CHANGELOG.md  Cargo.toml
olpc-cjson/src/: lib.rs  main.rs
tough/: CHANGELOG.md  Cargo.toml  README.md
tough-kms/: CHANGELOG.md  Cargo.toml  README.md
tough-kms/src/: client.rs  error.rs  lib.rs
tough-kms/tests/: all_test.rs  test_utils.rs
tough-kms/tests/data/: expected_public_key.json  response_create_key.json  response_public_key.json  response_public_key_no_algo.json  response_public_key_unmatch_algo.json  response_signature.json
tough-ssm/: CHANGELOG.md  Cargo.toml  README.md
tough-ssm/src/: client.rs  error.rs  lib.rs
tough/src/: cache.rs  datastore.rs  error.rs  fetch.rs  http.rs  io.rs  key_source.rs  lib.rs  sign.rs  target_name.rs  transport.rs  urlpath.rs
tough/src/editor/: keys.rs  mod.rs  signed.rs  targets.rs  test.rs
tough/src/schema/: de.rs  decoded.rs  error.rs  key.rs  mod.rs  spki.rs  verify.rs
tough/src/serde/: conv.rs  decoded.rs  key.rs  mod.rs  root.rs  snapshot.rs  targets.rs  timestamp.rs
tough/tests/: expiration_enforcement.rs  http.rs  interop.rs  repo_cache.rs  repo_editor.rs  rotated_root.rs  target_path_safety.rs  test_utils.rs  transport.rs
tough/tests/data/: .gitattributes  snakeoil_3.pem  targetskey  targetskey-1  targetskey-2
tough/tests/data/dubious-role-names/metadata/: ..%2F..%2Fpath%2Flike%2Fdubious.json
tough/tests/data/tuf-sha512/metadata/: 1.root.json  1.snapshot.json  1.targets.json  root.json  timestamp.json
tough_schema/: Cargo.toml
tough_schema/src/: de.rs  decoded.rs  error.rs  iter.rs  key.rs  lib.rs  spki.rs  verify.rs
tuftool/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
tuftool/src/: add_key_role.rs  add_role.rs  clone.rs  common.rs  copylike.rs  create.rs  create_role.rs  datetime.rs  deref.rs  download.rs  download_root.rs  error.rs  key.rs  main.rs  metadata.rs  refresh.rs  remove_key_role.rs  remove_role.rs  root.rs  root_digest.rs  sign.rs  source.rs  ssm.rs  transfer_metadata.rs  update.rs  update_targets.rs
tuftool/tests/: clone_command.rs  create_command.rs  create_repository_integration.rs  create_verify_repo.rs  delegation_commands.rs  download_command.rs  refresh_command.rs  root_command.rs  test_utils.rs  update_command.rs  utl.rs
