[package]
name = "olpc-cjson"
version = "0.1.0"
description = "serde_json Formatter to serialize as OLPC-style canonical JSON"
authors = ["iliana destroyer of worlds <iweller@amazon.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/awslabs/tough"
keywords = ["json"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0.47"
unicode-normalization = "0.1"
