[package]
name = "olpc-cjson"
version = "0.1.4"
description = "serde_json Formatter to serialize as OLPC-style canonical JSON"
authors = ["iliana destroyer of worlds <iweller@amazon.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/awslabs/tough"
keywords = ["json"]
edition = "2018"

[dependencies]
serde = "1"
serde_json = "1"
unicode-normalization = "0.1"

[dev-dependencies]
serde_derive = "1"
