[package]
name = "tough-kms"
version = "0.7.0"
description = "Implements AWS KMS as a key source for TUF signing keys"
authors = ["Shailesh Gothi <gothisg@amazon.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/awslabs/tough"
keywords = ["TUF", "KMS"]
edition = "2018"

[features]
default = ["aws-sdk-rust"]
aws-sdk-rust = ["aws-sdk-rust-rustls"]
aws-sdk-rust-tls = ["aws-config/native-tls", "aws-sdk-kms/native-tls"]
aws-sdk-rust-rustls = ["aws-config/rustls", "aws-sdk-kms/rustls"]

[dependencies]
tough = { version = "0.15", path = "../tough", features = ["http"] }
ring = { version = "0.17", features = ["std"] }
aws-sdk-kms = "0.28"
aws-config = "0.55"
snafu = { version = "0.7", features = ["backtraces-impl-backtrace-crate"] }
tokio = { version = "1", features = ["fs", "io-util", "time", "macros", "rt-multi-thread"] }
pem = "3"

[dev-dependencies]
aws-smithy-client = {version = "0.55", features = ["test-util"]}
aws-smithy-http = "0.55"
base64 = "0.21"
bytes = "1"
http = "0.2"
serde = "1"
serde_json = "1"
