[package]
name = "tough-kms"
version = "0.8.0"
description = "Implements AWS KMS as a key source for TUF signing keys"
authors = ["Shailesh Gothi <gothisg@amazon.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/awslabs/tough"
keywords = ["TUF", "KMS"]
edition = "2018"

[features]
default = ["aws-sdk-rust"]
aws-sdk-rust = ["aws-sdk-rust-rustls"]
aws-sdk-rust-rustls = ["aws-config/rustls", "aws-sdk-kms/rustls"]

[dependencies]
tough = { version = "0.16", path = "../tough", features = ["http"] }
ring = { version = "0.17", features = ["std"] }
aws-sdk-kms = "0.36"
aws-config = "0.57"
snafu = { version = "0.7", features = ["backtraces-impl-backtrace-crate"] }
tokio = { version = "1", features = ["fs", "io-util", "time", "macros", "rt-multi-thread"] }
pem = "3"

[dev-dependencies]
aws-smithy-runtime = {version = "0.57", features = ["test-util"]}
aws-smithy-http = "0.57"
aws-smithy-types = "0.57"
base64 = "0.21"
bytes = "1"
http = "0.2"
serde = "1"
serde_json = "1"
