[package]
name = "tough-kms"
version = "0.10.0"
description = "Implements AWS KMS as a key source for TUF signing keys"
authors = ["Shailesh Gothi <gothisg@amazon.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/awslabs/tough"
keywords = ["TUF", "KMS"]
edition = "2018"

[features]
default = ["aws-sdk-rust"]
aws-sdk-rust = ["aws-sdk-rust-rustls"]
aws-sdk-rust-rustls = ["aws-config/rustls", "aws-sdk-kms/rustls"]
fips = ["aws-lc-rs/fips", "tough/fips"]

[dependencies]
tough = { version = "0.18", path = "../tough", features = ["http"] }
aws-lc-rs = "1"
aws-sdk-kms = "1"
aws-config = { version = "1", default-features = false, features = ["credentials-process"] }
aws-smithy-experimental = { version = "0.1", features = ["crypto-aws-lc"] }
snafu = { version = "0.8", features = ["backtraces-impl-backtrace-crate"] }
tokio = { version = "1", features = ["fs", "io-util", "time", "macros", "rt-multi-thread"] }
pem = "3"

[dev-dependencies]
aws-smithy-runtime = { version = "1", features = ["test-util"] }
aws-smithy-http = "0.60"
aws-smithy-types = "1"
base64 = "0.22"
bytes = "1"
http = "1"
serde = "1"
serde_json = "1"
