[package]
name = "tough-ssm"
version = "0.11.0"
description = "Implements AWS SSM as a key source for TUF signing keys"
authors = ["Zac Mrowicki <mrowicki@amazon.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/awslabs/tough"
keywords = ["TUF", "SSM"]
edition = "2018"

[features]
default = ["aws-sdk-rust"]
aws-sdk-rust = ["aws-sdk-rust-rustls"]
aws-sdk-rust-rustls = ["aws-config/rustls", "aws-sdk-ssm/rustls"]

[dependencies]
tough = { version = "0.16", path = "../tough", features = ["http"] }
aws-sdk-ssm = "0.36"
aws-config = "0.57"
snafu = { version = "0.7", features = ["backtraces-impl-backtrace-crate"] }
tokio = { version = "1", features = ["fs", "io-util", "time", "macros", "rt-multi-thread"] }
