[package]
name = "tough-ssm"
version = "0.13.0"
description = "Implements AWS SSM as a key source for TUF signing keys"
authors = ["Zac Mrowicki <mrowicki@amazon.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/awslabs/tough"
keywords = ["TUF", "SSM"]
edition = "2018"

[features]
default = ["aws-sdk-rust"]
aws-sdk-rust = ["aws-sdk-rust-rustls"]
aws-sdk-rust-rustls = ["aws-config/rustls", "aws-sdk-ssm/rustls"]

[dependencies]
tough = { version = "0.18", path = "../tough", features = ["http"] }
aws-sdk-ssm = "1"
aws-config = { version = "1", default-features = false, features = ["credentials-process"] }
aws-smithy-experimental = { version = "0.1", features = ["crypto-aws-lc"] }
snafu = { version = "0.8", features = ["backtraces-impl-backtrace-crate"] }
tokio = { version = "1", features = ["fs", "io-util", "time", "macros", "rt-multi-thread"] }
