[package]
name = "tough"
version = "0.14.0"
description = "The Update Framework (TUF) repository client"
authors = ["iliana destroyer of worlds <iweller@amazon.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/awslabs/tough"
keywords = ["tuf", "update", "repository"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "alloc", "serde", "clock"] }
dyn-clone = "1"
globset = { version = "0.4" }
hex = "0.4"
log = "0.4"
olpc-cjson = { version = "0.1", path = "../olpc-cjson" }
pem = "1"
percent-encoding = "2"
reqwest = { version = "0.11", optional = true, default-features = false, features = ["blocking"] }
ring = { version = "0.16", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_plain = "1"
snafu = "0.7"
tempfile = "3"
typed-path = "0.4"
untrusted = "0.7"
url = "2"
walkdir = "2"

[dev-dependencies]
hex-literal = "0.4"
httptest = "0.15"
maplit = "1"

[features]
http = ["reqwest"]

# The `integ` feature enables integration tests. These tests require docker to be running on the host.
integ = []
