[package]
name = "tough_schema"
version = "0.1.0"
description = "Types for working with The Update Framework (TUF) repositories"
authors = ["iliana destroyer of worlds <iweller@amazon.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/awslabs/tough"
keywords = ["tuf", "update", "repository"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
hex = "0.3.2"
olpc-cjson = { version = "0.1.0", path = "../olpc-cjson" }
pem = "0.6.0"
ring = "0.14.6"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
serde_plain = "0.3.0"
sha2 = "0.8.0"
snafu = "0.4.1"
untrusted = "0.6.2"
