[package]
name = "tuftool"
version = "0.8.2"
description = "Utility for creating and signing The Update Framework (TUF) repositories"
authors = ["iliana destroyer of worlds <iweller@amazon.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/awslabs/tough"
keywords = ["tuf", "update", "repository"]
edition = "2018"

[features]
integ = []
default = ["aws-sdk-rust"]
aws-sdk-rust = ["aws-sdk-rust-rustls"]
aws-sdk-rust-native-tls = ["aws-config/native-tls", "aws-sdk-ssm/native-tls", "aws-sdk-kms/native-tls"]
aws-sdk-rust-rustls = ["aws-config/rustls", "aws-sdk-ssm/rustls", "aws-sdk-kms/rustls",]

[dependencies]
aws-config = "0.48.0"
aws-sdk-kms = "0.18.0"
aws-sdk-ssm = "0.18.0"
chrono = { version = "0.4.22", default-features = false, features = ["alloc", "std", "clock"] }
clap = { version = "3.2.23", features = ["derive"] }
hex = "0.4.2"
log = "0.4.8"
maplit = "1.0.1"
olpc-cjson = { version = "0.1.0", path = "../olpc-cjson" }
pem = "1.0.2"
rayon = "1.5"
reqwest = { version = "0.11.1", features = ["blocking"] }
ring = { version = "0.16.16", features = ["std"] }
serde = "1.0.144"
serde_json = "1.0.87"
simplelog = "0.12"
snafu = { version = "0.7", features = ["backtraces-impl-backtrace-crate"] }
tempfile = "3.3.0"
tokio = "~1.22"  # LTS
tough = { version = "0.12.5", path = "../tough", features = ["http"] }
tough-kms = { version = "0.4.2", path = "../tough-kms" }
tough-ssm = { version = "0.7.2", path = "../tough-ssm" }
url = "2.3.0"
walkdir = "2.3.2"

[dev-dependencies]
assert_cmd = "2.0"
httptest = "0.15"
