[package]
name = "tuftool"
version = "0.10.2"
description = "Utility for creating and signing The Update Framework (TUF) repositories"
authors = ["iliana destroyer of worlds <iweller@amazon.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/awslabs/tough"
keywords = ["tuf", "update", "repository"]
edition = "2018"

[features]
integ = []
default = ["aws-sdk-rust"]
aws-sdk-rust = ["aws-sdk-rust-rustls"]
aws-sdk-rust-rustls = ["aws-config/rustls", "aws-sdk-ssm/rustls", "aws-sdk-kms/rustls",]

[dependencies]
aws-config = "0.57"
aws-sdk-kms = "0.36"
aws-sdk-ssm = "0.36"
chrono = { version = "0.4", default-features = false, features = ["alloc", "std", "clock"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
hex = "0.4"
log = "0.4"
maplit = "1"
olpc-cjson = { version = "0.1", path = "../olpc-cjson" }
rayon = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
ring = { version = "0.17", features = ["std"] }
serde = "1"
serde_json = "1"
simplelog = "0.12"
snafu = { version = "0.7", features = ["backtraces-impl-backtrace-crate"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tough = { version = "0.16", path = "../tough", features = ["http"] }
tough-kms = { version = "0.8", path = "../tough-kms" }
tough-ssm = { version = "0.11", path = "../tough-ssm" }
url = "2"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
futures = "0.3"
futures-core = "0.3"
httptest = "0.15"
