[package]
name = "failure-server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
anyhow = "1.0"
noxious-client = "1.0"
rand = "0.8"
serde_json = "1.0"
tempfile = "3.8"
tokio = "1.0"
tokio-retry = "0.3"
tower = { version = "0.4", features = ["util"] }
tower-fault = "0.0.5"
tower-http = { version = "0.4", features = ["fs"] }
